# Edge_Detection

./: CMakeLists.txt
include/: Edge_Detection.hpp
src/: Edge_Detection.cpp  Edge_detection_class.cpp
